Better icons with distinct shapes for priority columns (#1488377); fix overflow in decorated drop-downs

--- a/skins/larry/styles.css
+++ b/skins/larry/styles.css
@@ -1487,6 +1487,9 @@ a.dropdownselector .handle {
 	margin: -1px 0;
 	padding-top: 5px;
 	min-height: 20px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 select.decorated {
